--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Resume - Start Bootstrap Theme</title>
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.jpg" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -45,7 +45,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         Dubai, United Arab Emirates
-                        <a href="mailto:karthik.neutron@gmail.com">namekarthik.neutron@gmail.com</a>
+                        <a href="mailto:karthik.neutron@gmail.com">karthik.neutron@gmail.com</a>
                     </div>
                     <p class="lead mb-5">I am an  Agricultural & Irrigation Engineer with more than 10 years experience in the field of Agriculture, Landscape & Sports Field Irrigation Systems specialized with  Design, Installation, Operation & Maintenance  across India, Africa &Middle-East. </p>
                     <div class="social-icons">
@@ -189,8 +189,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
+                    
                             Certified Irrigation Professional - Rain Bird Corporation
                         </li>
                         
